...
    "hot": "Top-Treffer",
    "sources": "Sources",
    "filter": {
      "all": "All",
      "listing": "Listings",
      "job": "Jobs",
      "volunteering": "Volunteering",
      "group": "Groups"
    },
    "source": {
      "listing": "Listing",
      "job": "Job",
      "volunteering": "Volunteering",
...
